# clearpath_onav_examples

./: .gitignore  LICENSE  README.md
clearpath_onav_api_examples/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_onav_api_examples/config/: repeated_mission_loops.yaml
clearpath_onav_api_examples/config/missions/: loop_cw.yaml
clearpath_onav_api_examples/launch/: cancel_mission.launch  control_modes.launch  inspection_mission_1.launch  mission_from_yaml_file.launch  mission_with_custom_task.launch  mission_with_wait_task.launch  monitor_status.launch  pause_mission.launch  repeated_mission_loops.launch  simple_area_coverage.launch  simple_mission_1.launch  simple_mission_2.launch  system_initialization.launch
clearpath_onav_api_examples/scripts/: cancel_mission  control_modes  inspection_mission_1  mission_from_yaml_file  mission_with_custom_task  mission_with_wait_task  monitor_status  pause_mission  repeated_mission_loops  simple_area_coverage  simple_mission_1  simple_mission_2  system_initialization
clearpath_onav_api_examples_lib/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
clearpath_onav_api_examples_lib/docs/: Makefile  conf.py  index.rst
clearpath_onav_api_examples_lib/src/clearpath_onav_api_examples_lib/: coordinate_lat_lon.py  coordinate_xy.py  goal.py  localization_survey.py  mission.py  navigation_status.py  ros_node.py  services.py  task.py  waypoint.py  yaml_config.py
clearpath_onav_examples/: CHANGELOG.rst  CMakeLists.txt  package.xml
cpr_onav_api_examples/: CMakeLists.txt  README.md  package.xml
cpr_onav_api_examples/config/: repeated_mission_loops.yaml  sample_mission.yaml  waterloo_park_grass_loop.yaml  waterloo_park_path_loop.yaml  waterloo_park_path_loop_collision_avoidance_off.yaml
cpr_onav_api_examples/config/missions/: loop_ccw.yaml
cpr_onav_api_examples/launch/: cancel_mission.launch  control_modes.launch  inspection_mission_1.launch  mission_from_yaml_file.launch  mission_with_custom_task.launch  mission_with_wait_task.launch  monitor_status.launch  pause_mission.launch  repeated_mission_loops.launch  simple_area_coverage.launch  simple_mission_1.launch  simple_mission_2.launch  system_initialization.launch
cpr_onav_api_examples/scripts/: cancel_mission  control_modes  inspection_mission_1  mission_from_yaml_file  mission_with_custom_task  mission_with_wait_task  monitor_status  pause_mission  repeated_mission_loops  simple_area_coverage  simple_mission_1  simple_mission_2  system_initialization
cpr_onav_api_examples/tools/: cancelMission  getRobotPosition
cpr_onav_api_examples_lib/: CMakeLists.txt  package.xml  setup.py
cpr_onav_api_examples_lib/src/cpr_onav_api_examples_lib/: control_status.py  coordinate_lat_lon.py  coordinate_utm.py  localization_status.py  localization_survey.py  mission.py  navigation_status.py  platform_status.py  yaml_config.py
cpr_onav_examples/: CMakeLists.txt  package.xml
