<?xml version="1.0"?>
<!--
Software License Agreement (proprietary)

\file      package.xml
\copyright Copyright (c) 2022, Clearpath Robotics, Inc., All rights reserved.

Redistribution and use in source and binary forms, with or without modification, is not permitted without the
express permission of Clearpath Robotics.
-->
<package format="2">
  <name>clearpath_onav_api_examples</name>
  <version>0.0.3</version>
  <maintainer email="jhiggins@clearpathrobotics.com">Jason Higgins</maintainer>
  <maintainer email="mhosmar@clearpathrobotics.com">Mike Hosmar</maintainer>
  <description>Examples to show how to use CPR OutdoorNav API</description>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
