<?xml version="1.0"?>
<!--
Software License Agreement (proprietary)

\file      package.xml
\copyright Copyright (c) 2022, Clearpath Robotics, Inc., All rights reserved.

Redistribution and use in source and binary forms, with or without modification, is not permitted without the
express permission of Clearpath Robotics.
-->
<package format="2">
  <name>clearpath_onav_api_examples_lib</name>
  <version>0.0.1</version>
  <maintainer email="jhiggins@clearpathrobotics.com">Jason Higgins</maintainer>
  <maintainer email="mhosmar@clearpathrobotics.com">Mike Hosmar</maintainer>
  <description>Examples library to show how to use CPR OutdoorNav API</description>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>

  <exec_depend>clearpath_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>wireless_msgs</exec_depend>

</package>
