<?xml version="1.0"?>
<!--
Software License Agreement (proprietary)

\file      package.xml
\copyright Copyright (c) 2023, Clearpath Robotics, Inc., All rights reserved.

Redistribution and use in source and binary forms, with or without modification, is not permitted without the
express permission of Clearpath Robotics.
-->
<package format="2">
  <name>clearpath_onav_examples</name>
  <version>0.0.1</version>
  <maintainer email="jmastrangelo@clearpathrobotics.com">Jose Mastrangelo</maintainer>
  <description>Examples to show how to use CPR OutdoorNav API</description>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>clearpath_onav_api_examples</exec_depend>
  <exec_depend>clearpath_onav_api_examples_lib</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
